cluster/projects/chiz_work_gd/gateway/chiz_gateway-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
  labels:
    app: gateway
spec:
  selector:
    app: gateway
  ports:
    - name: http
      port: 80           # внешний порт (Traefik слушает)
      targetPort: 8002   # контейнерный порт
  type: ClusterIP
